force-app/main/default/objects/Assigned_Crew__c/Assigned_Crew__c.object-meta.xml
<CustomObject>
    <label>Assigned Crew</label>
    <nameField>
        <label>Assigned Crew Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assigned Crews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>