force-app/main/default/objects/Assigned_Crew__c/fields/Default_Crew__c.field-meta.xml
<CustomField>
    <fullName>Default_Crew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BU: NPLMA - used to identify if a crew member was assigned when the work order was created</description>
    <label>Default Crew</label>
    <type>Checkbox</type>
</CustomField>