force-app/main/default/objects/Assigned_Crew__c/fields/Default_Foreman__c.field-meta.xml
<CustomField>
    <fullName>Default_Foreman__c</fullName>
    <description>BA: NPLMA - Determines if an Assigned Crew record is a foreman or default crew member, used to pull in correct crew members on JHA</description>
    <formula>IF(AND(Employee__r.SFS_User_Profile_Name__c !=&apos;Foreman&apos;, Default_Crew__c = TRUE, ISBLANK( Removed_Date__c)),  TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Foreman</label>
    <type>Checkbox</type>
</CustomField>