force-app/main/default/objects/Assigned_Crew__c/fields/Employee_Absent__c.field-meta.xml
<CustomField>
    <fullName>Employee_Absent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Absent</label>
    <type>Checkbox</type>
</CustomField>