force-app/main/default/objects/Assigned_Crew__c/fields/Employee_Profile__c.field-meta.xml
<CustomField>
    <fullName>Employee_Profile__c</fullName>
    <formula>Employee__r.SFS_User_Profile_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Profile</label>
    <type>Text</type>
</CustomField>