force-app/main/default/objects/Assigned_Crew__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>disco__Form__c</referenceTo>
    <relationshipLabel>Assigned Crew</relationshipLabel>
    <relationshipName>Assigned_Crews</relationshipName>
    <type>Lookup</type>
</CustomField>