force-app/main/default/objects/Assigned_Crew__c/fields/JHA_Work_Order_Title__c.field-meta.xml
<CustomField>
    <fullName>JHA_Work_Order_Title__c</fullName>
    <description>44599 required to filter the SAFE observer in Youreka form</description>
    <formula>Work_Order__r.JHA_Work_Order_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JHA Work Order Title</label>
    <type>Text</type>
</CustomField>