force-app/main/default/objects/Assigned_Crew__c/fields/Notification_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Notification_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>25681</description>
    <label>Notification Assignment</label>
    <referenceTo>Notification_Assignment__c</referenceTo>
    <relationshipLabel>Assigned Crews</relationshipLabel>
    <relationshipName>Assigned_Crews</relationshipName>
    <type>Lookup</type>
</CustomField>