force-app/main/default/objects/Assigned_Crew__c/fields/NPL_JHA_for_SDOCS__c.field-meta.xml
<CustomField>
    <fullName>NPL_JHA_for_SDOCS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>26162</description>
    <label>JHA</label>
    <referenceTo>NPL_JHA_for_SDOCS__c</referenceTo>
    <relationshipLabel>Assigned Crews</relationshipLabel>
    <relationshipName>Assigned_Crews</relationshipName>
    <type>Lookup</type>
</CustomField>