force-app/main/default/objects/Assigned_Crew__c/fields/Personnel_Number__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Number__c</fullName>
    <label>Personnel Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>