force-app/main/default/objects/Assigned_Crew__c/fields/Removed_Date__c.field-meta.xml
<CustomField>
    <fullName>Removed_Date__c</fullName>
    <label>Removed Date</label>
    <type>Date</type>
</CustomField>