force-app/main/default/objects/Assigned_Crew__c/fields/Service_Crew_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Crew_ID__c</fullName>
    <description>28801: Used today to quickly find records to be updated when a resource leaves a crew</description>
    <label>Service Crew ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>