force-app/main/default/objects/Assigned_Crew__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>25681</description>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Assigned Crews</relationshipLabel>
    <relationshipName>Assigned_Crews</relationshipName>
    <type>Lookup</type>
</CustomField>