force-app/main/default/objects/Assigned_Crew__c/fields/Signature_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Signature_Image_Id__c</fullName>
    <description>BA: NPLMA - Captures Imaged Id of Assigned Crew Members when a signed JHA is submitted</description>
    <label>Signature Image Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>