force-app/main/default/objects/Assigned_Crew__c/fields/Signature_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Signature_Image_URL__c</fullName>
    <description>24401</description>
    <formula>LEFT( $Api.Enterprise_Server_URL_100, FIND( &quot;.com&quot;, $Api.Enterprise_Server_URL_100 ) + 4)&amp; &quot;sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB720BY480&amp;versionId=&quot; &amp;  Signature_Image_Id__c  &amp; &quot;&amp;operationContext=CHATTER&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Image URL</label>
    <type>Text</type>
</CustomField>