force-app/main/default/objects/Assigned_Crew__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>25681</description>
    <formula>IF (  ISBLANK(Notification_Assignment__r.Id), &quot;JHA&quot;, &quot;Toolbox Talk&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>