force-app/main/default/objects/Assigned_Crew__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Assigned Crew</relationshipLabel>
    <relationshipName>Assigned_Crews</relationshipName>
    <type>Lookup</type>
</CustomField>