force-app/main/default/objects/Assigned_Crew__c/fields/Work_Order_End__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_End__c</fullName>
    <description>BA: NPLMA - Used to query open Work Orders in Default Crew flow</description>
    <formula>Work_Order__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order End</label>
    <type>Date</type>
</CustomField>