force-app/main/default/objects/Assigned_Crew__c/fields/Work_Order_Foreman__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Foreman__c</fullName>
    <description>BA: NPLMA - Used to query open Work Orders in Default Crew flow</description>
    <formula>Work_Order__r.Foreman_SFS_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Foreman</label>
    <type>Text</type>
</CustomField>