force-app/main/default/objects/Assigned_Crew__c/fields/Work_Order_Foreman_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Foreman_is_Current_User__c</fullName>
    <formula>IF(Work_Order__r.Foreman_SFS_User__c =  $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Foreman is Current User</label>
    <type>Checkbox</type>
</CustomField>