force-app/main/default/objects/Assigned_Crew__c/fields/Work_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Status__c</fullName>
    <description>BA: NPLMA - Displays current Work Order Status</description>
    <formula>TEXT(Work_Order__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Status</label>
    <type>Text</type>
</CustomField>